--- a/persoonsapplicatie/src/main/resources/templates/add.html
+++ b/persoonsapplicatie/src/main/resources/templates/add.html
@@ -42,6 +42,10 @@
     <form th:action="@{/personen/all}">
         <button type="submit" th:name="action">Opslaan</button>
     </form>
+    <br/>
+    <form th:action="@{/personen/addAdres}">
+        <button type="submit" th:name="action">Adres invoeren</button>
+    </form>
 <!--    <input type="submit" th:value="'Opslaan'" />-->
 </form>
 
